src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__assigning_of_arrays_and_pointers_allowed.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main = type { [2 x i16], i16*, [2 x i16]* }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %y = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %z = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %tmpVar = getelementptr inbounds [2 x i16], [2 x i16]* %x, i32 0, i32 0
  store i16 1, i16* %tmpVar, align 2
  %deref = load i16*, i16** %y, align 8
  store i16 2, i16* %deref, align 2
  %deref1 = load i16*, i16** %y, align 8
  %1 = load i16, i16* %deref1, align 2
  %erase = and i16 %1, -3
  %or = or i16 %erase, 6
  store i16 %or, i16* %deref1, align 2
  %deref2 = load [2 x i16]*, [2 x i16]** %z, align 8
  %tmpVar3 = getelementptr inbounds [2 x i16], [2 x i16]* %deref2, i32 0, i32 0
  store i16 4, i16* %tmpVar3, align 2
  %deref4 = load [2 x i16]*, [2 x i16]** %z, align 8
  %tmpVar5 = getelementptr inbounds [2 x i16], [2 x i16]* %deref4, i32 0, i32 1
  %2 = load i16, i16* %tmpVar5, align 2
  %erase6 = and i16 %2, -3
  %or7 = or i16 %erase6, 10
  store i16 %or7, i16* %tmpVar5, align 2
  ret void
}

