src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_add_float.snap
---
source: src/codegen/tests/expression_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %x1 = alloca float, align [filtered]
  %x2 = alloca float, align [filtered]
  %x3 = alloca float, align [filtered]
  %l1 = alloca double, align [filtered]
  store float 0.000000e+00, float* %x1, align [filtered]
  store float 0.000000e+00, float* %x2, align [filtered]
  store float 0.000000e+00, float* %x3, align [filtered]
  store double 0.000000e+00, double* %l1, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %load_x1 = load float, float* %x1, align [filtered]
  %load_x2 = load float, float* %x2, align [filtered]
  %tmpVar = fadd float %load_x1, %load_x2
  %load_x3 = load float, float* %x3, align [filtered]
  %tmpVar1 = fadd float %tmpVar, %load_x3
  %0 = fpext float %tmpVar1 to double
  %load_l1 = load double, double* %l1, align [filtered]
  %tmpVar2 = fadd double %0, %load_l1
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}
