src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_div_with_named_arguments.snap
---
source: src/codegen/tests/expression_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align 4
  %x = alloca i32, align 4
  %y = alloca i32, align 4
  store i32 20, i32* %x, align 4
  store i32 4, i32* %y, align 4
  store i32 0, i32* %main, align 4
  %load_x = load i32, i32* %x, align 4
  %load_y = load i32, i32* %y, align 4
  %tmpVar = sdiv i32 %load_x, %load_y
  %main_ret = load i32, i32* %main, align 4
  ret i32 %main_ret
}
