src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_move_with_named_argument.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32 }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %load_b = load i32, i32* %b, align 4
  store i32 %load_b, i32* %a, align 4
  ret void
}
