src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_sel_with_named_argument.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32, i32 }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %c = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %load_b = load i32, i32* %b, align 4
  %load_c = load i32, i32* %c, align 4
  %1 = select i1 true, i32 %load_c, i32 %load_b
  store i32 %1, i32* %a, align 4
  ret void
}
